# rp2040_polysynth

./: .gitignore  CMakeLists.txt  pico_polysynth_2.c  readme.md
include/: a_io.h  adsr.h  bit_crusher.h  bus.h  common.h  mcp4921.h  midi_cc.h  midi_input_driver.h  operator.h  phasor.h  rate_reducer.h  ring_mod.h  signal.h  sine_osc.h  trig_gate.h  vca.h  voice.h  voice_allocator.h
include/nanomidi/: decoder.h
include/tables/: exp_table.c  exp_table.h  log_table.c  log_table.h  phase_step_table.c  phase_step_table.h  sine_table.c  sine_table.h
src/: a_io.c  adsr.c  bit_crusher.c  bus.c  mcp4921.c  midi_cc.c  midi_input_driver.c  nanomidi_decoder.c  operator.c  phasor.c  rate_reducer.c  ring_mod.c  sine_osc.c  vca.c  voice.c  voice_allocator.c
utils/: exp_table_gen.c  log_table_gen.c  makefile  phase_step_table.c  phase_step_table.h  phase_step_table_gen.c  sin_table_gen.c
